# oracle-simple

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  docker-compose.yml  fourmolu.yaml  oracle-simple.cabal  shell.nix  stack.yaml
.github/workflows/: main.yml
cbits/: dpiDataBuffer.c  json.c  oracle-helpers.c
db/: startup.sh
exe/: Main.hs
init-scripts/: init.sql
nix/: default.nix  nixpkgs.json
nix/odpic/: default.nix  samples.nix
src/Database/Oracle/: Simple.hs
src/Database/Oracle/Simple/: Execute.hs  FromField.hs  FromRow.hs  Internal.hs  JSON.hs  LOB.hs  Object.hs  Pool.hs  Query.hs  Queue.hs  TableInfo.hs  ToField.hs  ToRow.hs  Transaction.hs
test/: Main.hs
