cabal-version:       >=1.10
name:                oracle-simple
version:             0.1.0.0
synopsis:            Easy access to Oracle
description:         Query Oracle databases using odpic
bug-reports:         https://github.com/haskell-oracle/oracle-simple
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com, khandkararjun@gmail.com
copyright:           H-E-B (c) 2021
category:            Database
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag default_paths
  default:
    True
  description:
    use default paths for odpic as set via `make install` from source

flag apt_paths
  default:
    False
  description:
    use paths for odpic as set by libodpic4 and odpic-dev from apt

executable tests
  main-is:
    Main.hs
  build-depends:
    base < 5, oracle-simple, text, time, hspec, QuickCheck, quickcheck-instances
  hs-source-dirs:
    test
  default-language:
    Haskell2010

library
  exposed-modules:
    Database.Oracle.Simple
  other-modules:
      Database.Oracle.Simple.Internal
    , Database.Oracle.Simple.FromRow
    , Database.Oracle.Simple.FromField
    , Database.Oracle.Simple.ToRow
    , Database.Oracle.Simple.ToField
    , Database.Oracle.Simple.Query
    , Database.Oracle.Simple.Execute
  build-depends:
    base < 5, bytestring, derive-storable, scientific, text, mtl, time, QuickCheck, regex-tdfa
  hs-source-dirs:
    src
  extra-libraries:
    odpic
  if os(linux)
    if flag(default_paths)
      include-dirs:
        /usr/local/include
      extra-lib-dirs:
        /usr/local/lib
    if flag(apt_paths)
      include-dirs:
        /usr/include
      extra-lib-dirs:
        /usr/lib/x86_64-linux-gnu
  if flag(default_paths) && os(osx)
    includes:
      /usr/local/include/dpi.h
    include-dirs:
      /usr/local/include
    extra-lib-dirs:
      /usr/local/lib
  c-sources:
    cbits/oracle-helpers.c
  default-language:
    Haskell2010

source-repository head
  type: git
  location: git://github.com/haskell-oracle/oracle-simple.git
