cabal-version:       >=1.10
name:                oracle-simple
version:             0.1.0.0
synopsis:            Easy access to Oracle
description:         Query Oracle databases using odpic
bug-reports:         https://github.com/haskell-oracle/oracle-simple
license:             MIT
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com, khandkararjun@gmail.com
copyright:           H-E-B (c) 2024
category:            Database
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag default_paths
  default:
    True
  description:
    use default paths for odpic as set via `make install` from source

flag apt_paths
  default:
    False
  description:
    use paths for odpic as set by libodpic4 and odpic-dev from apt

library
  exposed-modules:
      Database.Oracle.Simple
  other-modules:
      Database.Oracle.Simple.Execute
      Database.Oracle.Simple.FromField
      Database.Oracle.Simple.FromRow
      Database.Oracle.Simple.Internal
      Database.Oracle.Simple.JSON
      Database.Oracle.Simple.Pool
      Database.Oracle.Simple.Query
      Database.Oracle.Simple.ToField
      Database.Oracle.Simple.ToRow
      Database.Oracle.Simple.Transaction
  hs-source-dirs:
      src
  c-sources:
      cbits/dpiDataBuffer.c
      cbits/oracleHelpers.c
  extra-libraries:
      odpic
  build-depends:
      aeson
    , base
    , bytestring
    , derive-storable
    , mtl
    , random
    , scientific
    , text
    , time
    , uuid
    , vector
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-export-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wnoncanonical-monad-instances -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations -Wunused-packages -O2 -haddock
  if os(linux) && flag(default_paths)
    include-dirs:
        /usr/local/include
    extra-lib-dirs:
        /usr/local/lib
  if os(linux) && flag(apt_paths)
    include-dirs:
        /usr/include
    extra-lib-dirs:
        /usr/lib/x86_64-linux-gnu
  if os(osx) && flag(default_paths)
    include-dirs:
        /usr/local/include
    extra-lib-dirs:
        /usr/local/lib

executable tests
  main-is:
    Main.hs
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-export-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wnoncanonical-monad-instances -Wredundant-constraints -Wpartial-fields -Wmissed-specialisations -Wunused-packages -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base
    , hedgehog
    , hspec
    , hspec-hedgehog
    , oracle-simple
    , time

source-repository head
  type: git
  location: git://github.com/haskell-oracle/oracle-simple.git
